<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Toolbar -->
    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- Head -->
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/back"
            style="@style/GreenCalendar.NavigationButtonStyle"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/back"
            app:contentPadding="4dp" />
        <TextView
            android:id="@+id/head"
            style="@style/GreenCalendar.NavigationTextStyle"
            android:text="@string/plant_passport"
            android:layout_alignTop="@id/back"
            android:layout_alignBottom="@id/back"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/apply"
            style="@style/GreenCalendar.NavigationButtonStyle"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/check_mark"
            android:visibility="gone"
            app:contentPadding="15dp" />
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/edit"
            style="@style/GreenCalendar.NavigationButtonStyle"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/edit"
            android:visibility="visible"
            app:contentPadding="15dp" />
    </RelativeLayout>
    <!-- Content -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!-- Guidelines -->
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/medium_padding"/>
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/medium_padding" />
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="@dimen/medium_padding" />

            <!-- Barriers -->
            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/events_barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="events,add_event"
                app:barrierDirection="top" />
            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/param_barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="watering, watering_value"
                app:barrierDirection="bottom" />


            <!-- Groups -->
            <androidx.constraintlayout.widget.Group
                android:id="@+id/param_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:constraint_referenced_ids="name, age, type, watering,
                name_value, age_value, type_value, watering_value" />
            <androidx.constraintlayout.widget.Group
                android:id="@+id/edit_param_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="edit_name, edit_planting_date, edit_type, edit_watering" />


            <!-- Plants photo -->
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="h, 1:1"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.65"
                android:layout_marginTop="@dimen/small_padding"
                android:background="@drawable/main_menu_option_appearance"
                android:src="@drawable/heart_flower"
                app:contentPadding="@dimen/small_padding"
                app:layout_constraintEnd_toStartOf="@id/right"
                app:layout_constraintStart_toEndOf="@id/left"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Plant Info -->
            <!-- Name -->
            <TextView
                android:id="@+id/name"
                style="@style/TextViewParametersOnPassport"
                android:text="@string/plants_name"
                android:layout_marginTop="@dimen/medium_padding"
                app:layout_constraintBottom_toTopOf="@id/age"
                app:layout_constraintEnd_toStartOf="@id/name_value"
                app:layout_constraintStart_toEndOf="@id/left"
                app:layout_constraintTop_toBottomOf="@id/image" />
            <TextView
                android:id="@+id/name_value"
                style="@style/TextViewParametersOnPassport"
                android:layout_width="0dp"
                tools:text="Олег"
                app:layout_constraintTop_toTopOf="@id/name"
                app:layout_constraintBottom_toBottomOf="@id/name"
                app:layout_constraintEnd_toStartOf="@id/right"
                app:layout_constraintStart_toEndOf="@+id/name" />

            <!-- Age -->
            <TextView
                android:id="@+id/age"
                style="@style/TextViewParametersOnPassport"
                android:text="@string/plants_age"
                android:layout_marginTop="@dimen/medium_padding"
                app:layout_constraintBottom_toTopOf="@id/type"
                app:layout_constraintEnd_toStartOf="@id/age_value"
                app:layout_constraintStart_toEndOf="@id/left"
                app:layout_constraintTop_toBottomOf="@id/name" />
            <TextView
                android:id="@+id/age_value"
                style="@style/TextViewParametersOnPassport"
                android:layout_width="0dp"
                app:layout_constraintTop_toTopOf="@id/age"
                app:layout_constraintBottom_toBottomOf="@id/age"
                app:layout_constraintEnd_toStartOf="@id/right"
                app:layout_constraintStart_toEndOf="@id/age"
                tools:text="12 лет" />

            <!-- Type -->
            <TextView
                android:id="@+id/type"
                style="@style/TextViewParametersOnPassport"
                android:text="@string/plants_type"
                android:layout_marginTop="@dimen/medium_padding"
                app:layout_constraintBottom_toTopOf="@id/watering"
                app:layout_constraintEnd_toStartOf="@id/type_value"
                app:layout_constraintStart_toEndOf="@id/left"
                app:layout_constraintTop_toBottomOf="@id/age" />
            <TextView
                android:id="@+id/type_value"
                style="@style/TextViewParametersOnPassport"
                android:layout_width="0dp"
                tools:text="Кактус"
                app:layout_constraintEnd_toStartOf="@id/right"
                app:layout_constraintStart_toEndOf="@id/type"
                app:layout_constraintTop_toTopOf="@id/type"
                app:layout_constraintBottom_toBottomOf="@id/type" />

            <!-- Watering frequency -->
            <TextView
                android:id="@+id/watering"
                style="@style/TextViewParametersOnPassport"
                android:text="@string/watering_frequency"
                android:layout_marginTop="@dimen/medium_padding"
                app:layout_goneMarginBottom="@dimen/medium_padding"
                app:layout_constraintBottom_toTopOf="@id/param_barrier"
                app:layout_constraintEnd_toStartOf="@id/watering_value"
                app:layout_constraintStart_toEndOf="@id/left"
                app:layout_constraintTop_toBottomOf="@id/type" />
            <TextView
                android:id="@+id/watering_value"
                style="@style/TextViewParametersOnPassport"
                android:layout_width="0dp"
                tools:text="Очень редко"
                app:layout_constraintEnd_toStartOf="@id/right"
                app:layout_constraintStart_toEndOf="@id/watering"
                app:layout_constraintTop_toTopOf="@id/watering"
                app:layout_constraintBottom_toBottomOf="@id/watering" />

            <!-- Edit parameters -->
            <EditText
                android:id="@+id/edit_name"
                style="@style/EditTextParametersOnPassport"
                app:layout_constraintTop_toBottomOf="@id/param_barrier"
                app:layout_constraintStart_toEndOf="@id/left"
                app:layout_constraintEnd_toStartOf="@id/right"
                app:layout_constraintBottom_toTopOf="@id/edit_planting_date"
                android:hint="@string/input_plants_name" />

            <EditText
                android:id="@+id/edit_planting_date"
                style="@style/EditTextParametersOnPassport"
                app:layout_constraintTop_toBottomOf="@id/edit_name"
                app:layout_constraintStart_toEndOf="@id/left"
                app:layout_constraintEnd_toStartOf="@id/right"
                app:layout_constraintBottom_toTopOf="@id/edit_type"
                android:hint="@string/input_planting_date" />

            <EditText
                android:id="@+id/edit_type"
                style="@style/EditTextParametersOnPassport"
                app:layout_constraintTop_toBottomOf="@id/edit_planting_date"
                app:layout_constraintStart_toEndOf="@id/left"
                app:layout_constraintEnd_toStartOf="@id/right"
                app:layout_constraintBottom_toTopOf="@id/edit_watering"
                android:hint="@string/input_plants_type" />

            <EditText
                android:id="@+id/edit_watering"
                style="@style/EditTextParametersOnPassport"
                app:layout_constraintTop_toBottomOf="@id/edit_type"
                app:layout_constraintStart_toEndOf="@id/left"
                app:layout_constraintEnd_toStartOf="@id/right"
                app:layout_constraintBottom_toTopOf="@id/events_barrier"
                android:hint="@string/input_watering_frequency" />

            <!-- Events -->
            <TextView
                android:id="@+id/events"
                style="@style/GreenCalendar.NavigationTextStyle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/care"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/add_event"
                app:layout_constraintBottom_toBottomOf="@id/add_event" />
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/add_event"
                style="@style/GreenCalendar.NavigationButtonStyle"
                android:src="@drawable/plus"
                app:contentPadding="@dimen/small_padding"
                app:layout_constraintTop_toBottomOf="@id/param_barrier"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/events_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                app:layout_constraintStart_toEndOf="@id/left"
                app:layout_constraintEnd_toStartOf="@id/right"
                app:layout_constraintTop_toBottomOf="@id/add_event"
                app:layout_constraintBottom_toTopOf="@id/bottom" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>
